--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -143,7 +143,22 @@
 			<span class="linkTitle">Settings</span>
 		</div> -->
 	</div>
+	
+	<!-- <div class="sidebar-fixed position-fixed activeMenu">
+
+		<div mat-button class="mat-button" [routerLink]="['/settings']"  skipLocationChange routerLinkActive="active" (click)="preview('weights')" mat-button>
+			<span class="inlineIconBox leftAdjust">
+				<img src="assets/icons/sidemenu/new-icons/weights.svg" class="defaultIcon">	
+				<img src="assets/icons/sidemenu/new-icons/weights.svg" class="activeIcon">				
+			</span>
+			<span class="linkTitle">Channels</span>
+		</div>
+	 </div> 
+	 -->
+		
+		
 </perfect-scrollbar>
 
 </div>
+
 <!-- Sidebar -->
