--- a/findly-builder/src/app/components/facets/facets.component.scss
+++ b/findly-builder/src/app/components/facets/facets.component.scss
@@ -23,14 +23,75 @@
 .facets-main-container{
     position: relative;
     height: 100vh;
-    .header{
+    .header-sec{
         background: #F8F9FA;
         font-weight: 500;
         font-size: 18px;
         line-height: 22px;
         color: #000000;
         padding: 15px 30px;
+      }
+    .right-sec{
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        // .seach_add_feild{
+        //         display: flex;
+        //         align-items: center;
+        //         justify-content: flex-end;
+        //         padding: 17px 18px;
+        //         margin: 10px 0px 10px 0px;
+        //         background: #F5F8FA;
+        //         border-radius: 4px;
+        // }
+        .kr-sg-input-text{
+            width: 300px;
+            right: 10px;
+            width: 0px;
+            display: none; 
+            position: relative;
+            &.active{
+                display: block;
+                width: 300px;
+            }
+        }
+        .seach-block{
+            color: #202124;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 12px;
+            margin-right: 30px;
+            img{
+                margin-right: 7px;
+                cursor: pointer;
+                position: relative;
+                top: -1px;
+            }
+        }
+        .add_feild{
+            color: #202124;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 14px;
+            margin-right: 30px;
+            cursor: pointer;
+            img{
+                margin-right: 7px;
+                position: relative;
+                top: -1px;
+            }
+        }
+        .clock{
+            cursor: pointer;
+            img{
+                position: relative;
+                top: -1px;
+            }
+            
+        }
     }
+}
     .search-input-block{
         display: flex;
         align-items: center;
@@ -47,6 +108,7 @@
                 margin-left: 12px;
                 cursor: pointer;
             }
+            
         }
     }
     .table_section{
@@ -216,7 +278,7 @@
         }
 
     }
-}
+
 .disabled{
     pointer-events: none !important;
     opacity: 0.8;
