--- a/findly-builder/src/app/components/scheduler/scheduler.component.html
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.html
@@ -84,7 +84,7 @@
               <li (click) = "repeatTimeZone('Daily')"><a>Daily</a></li>
               <li (click) = "repeatTimeZone('Weekly')"><a>Weekly</a></li>
               <li (click) = "repeatTimeZone('Monthly')"><a>Monthly</a></li>
-              <li (click) = "repeatTimeZone('Anually')"><a>Anually</a></li>
+              <li (click) = "repeatTimeZone('Annually')"><a>Annually</a></li>
               <li (click) = "repeatTimeZone('Every weekday(Monday to Friday)')"><a>Every weekday(Monday to Friday)</a></li>
               <li (click) = "openCustomRecModal('Custom')"><a>Custom</a></li>
             </ul>
