--- a/findly-builder/src/app/components/dashboard/dashboard.component.html
+++ b/findly-builder/src/app/components/dashboard/dashboard.component.html
@@ -17,16 +17,17 @@
     </div>
     <perfect-scrollbar class="scroll_content">        
         <div *ngIf="slider === 0" class="main-dashbord-metrics">
-            <div class="top-cards-section row m-0">
+            <div class="top-cards-section row m-0" *ngIf="totalUsersStats && totalSearchesStats">
                 <div class="col cards-data">
                     <div class="content">
                         <div class="title-info">Total Users<img src="assets/icons/gray_info.svg" class="pl-1"></div>
                         <div class="bottom-sec">
                             <div class="left-sec">
-                                <div class="count">80</div>
+                                <div class="count">{{ totalUsersStats.totalUsers || 80}}</div>
                                 <div class="data-percentage">
-                                    <img src="assets/icons/arrow-increase.svg">
-                                    <span class="percentage">12%</span>
+                                    <img src="assets/icons/arrow-increase.svg" *ngIf="totalUsersStats.percentageIncrease >= 0">
+                                    <img src="assets/icons/arrow-decrease.svg" *ngIf="totalUsersStats.percentageIncrease < 0">
+                                    <span class="percentage">{{ totalUsersStats.percentageIncrease || 12}}%</span>
                                 </div>
                             </div>
                             <div class="right-sec">
@@ -40,10 +41,11 @@
                         <div class="title-info">Total Searches<img src="assets/icons/gray_info.svg" class="pl-1"></div>
                         <div class="bottom-sec">
                             <div class="left-sec">
-                                <div class="count">2945</div> <!-- {{totalSearchSum}} -->
+                                <div class="count">{{ totalSearchesStats.totalSearches || 2945}}</div> <!-- {{totalSearchSum}} -->
                                 <div class="data-percentage">
-                                    <img src="assets/icons/arrow-increase.svg">
-                                    <span class="percentage">8%</span>
+                                    <img src="assets/icons/arrow-increase.svg" *ngIf="totalSearchesStats.totalSearches >= 0">
+                                    <img src="assets/icons/arrow-decrease.svg" *ngIf="totalSearchesStats.totalSearches < 0">
+                                    <span class="percentage">{{ totalSearchesStats.totalSearches || 8}}%</span>
                                 </div>
                             </div>
                             <div class="right-sec">
@@ -57,10 +59,11 @@
                         <div class="title-info">Result Rate<img src="assets/icons/gray_info.svg" class="pl-1"></div>
                         <div class="bottom-sec">
                             <div class="left-sec">
-                                <div class="count">70%</div>
+                                <div class="count">{{totalSearchesStats.resultRate || 7}}%</div>
                                 <div class="data-percentage failed">
-                                    <img src="assets/icons/arrow-decrease.svg">
-                                    <span class="percentage">3%</span>
+                                    <img src="assets/icons/arrow-increase.svg" *ngIf="totalSearchesStats.increasedResultRate >= 0">
+                                    <img src="assets/icons/arrow-decrease.svg" *ngIf="totalSearchesStats.increasedResultRate < 0">
+                                    <span class="percentage">{{totalSearchesStats.increasedResultRate || 3}}%</span>
                                 </div>
                             </div>
                             <div class="right-sec">
@@ -93,7 +96,7 @@
                         </div>
                         <div class="bottom-sec">
                             <div class="left-sec">
-                                <div class="count">1.9</div>
+                                <div class="count">{{totalSearchesStats.avgPosition || 1.9}}</div>
                             </div>
                         </div>
                     </div>
