--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -1,1 +1,37 @@
-<p>credentials-list works!</p>
+<div class="manage-credentials-container">
+    <div class="header-sec col-12 row m-0">
+        <div class="col-4 p-0 title-header"> Manage Credentials</div>
+         <div class="col-8 right-sec p-0">            
+                <div class="kr-sg-input-text m-0">
+                    <input type="text" placeholder="Search" autocomplete="off" class="input-search" placeholder="Search">
+                </div>
+                <div class="seach-block"><img src="assets/icons/search.svg"><img src="assets/images/close.svg" class="d-none">Search
+                </div>
+                <div class="add_feild"><img src="assets/icons/add_plus.svg">Add Credential
+                </div>
+                <div class="clock"><img src="assets/icons/clock.svg"></div>
+         </div>
+    </div>
+    <perfect-scrollbar class="scroll-table">
+        <div class="table-data">
+            <div class="table-header row m-0">
+                <div class="col-3 title">Credential Name</div>
+                <div class="col-3 title">Credential usage</div>
+                <div class="col-3 title">last updated<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
+                <div class="col-3 title">last updated by</div>
+            </div>
+            <div class="table-body-content row m-0 align-items-center">
+                <div class="col-3 title">Banking Bot</div>
+                <div class="col-3 title">--</div>
+                <div class="col-3 title">11/08/2020 - 07:07pm</div>
+                <div class="col-3 title">
+                    <span class="">Melissa Hedderman</span>
+                    <span class="float-right action-links">
+                        <span class="actions-links mr-3" ngbTooltip='Edit' [container]='"body"'><img class="action_icon" src="assets/images/edit-pencil.svg"></span>
+                        <span class="actions-links" ngbTooltip='Delete' [container]='"body"'><img class="action_icon" src="assets/icons/delete-table.svg"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </perfect-scrollbar>    
+</div>
