--- a/findly-builder/src/app/components/add-faq/add-faq.component.html
+++ b/findly-builder/src/app/components/add-faq/add-faq.component.html
@@ -282,11 +282,11 @@
       <div class="modal-body textAlignLeft">
         <div class="kr-sg-input-text mb-3">
           <div class="label-text">URL</div>
-          <input maxlength="5128" type="text" autocomplete="off" placeholder="App name" class="input-text" [(ngModel)]="imgInfo.url" name="appName">
+          <input maxlength="5128" type="text" autocomplete="off" placeholder="Enter Url" class="input-text" [(ngModel)]="imgInfo.url" name="appName">
         </div>
         <div class="kr-sg-input-text mb-3">
-          <div class="label-text">ALT</div>
-          <input maxlength="128" type="text" autocomplete="off" placeholder="App name" class="input-text" [(ngModel)]="imgInfo.alt" name="appName">
+          <div class="label-text">Name</div>
+          <input maxlength="128" type="text" autocomplete="off" placeholder="Enter Name" class="input-text" [(ngModel)]="imgInfo.alt" name="appName">
         </div>
       </div>
       <div class="modal-footer">
