--- a/findly-builder/src/app/components/faq-source/faq-source.component.html
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.html
@@ -47,7 +47,7 @@
                                 <ul class="dropdown-menu content-menu faq-filter-add" ngbDropdownMenu>
                                   <li (click)="selectSourceDrop.close();addFaqSource('faqWeb')">Extract FAQs</li>
                                   <li (click)="selectSourceDrop.close();addFaqSource('faqDoc')">Import FAQs</li>
-                                  <li (click)="selectSourceDrop.close();addFaqSource('manual')">Add FAQs Manually</li>
+                                  <li (click)="selectSourceDrop.close();addFaqSource('manual')">Add Manually</li>
                                 </ul>
                             </div>
                         </div>
