--- a/findly-builder/src/app/components/user-engagement/user-engagement.component.html
+++ b/findly-builder/src/app/components/user-engagement/user-engagement.component.html
@@ -89,30 +89,30 @@
                             <!-- <ng5-slider [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"></ng5-slider> -->
                             <div class="row m-0 bottom-row col-12 ">
                                 <div class="slider-sec col-6 p-0">
-                                    <!-- <ng5-slider class = "col-3" [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"></ng5-slider> -->
+                                    <ng5-slider class = "col-3" [(value)]="durationRange1" [(highValue)]="durationRange2" [options]="durationOptions" class="double_slider slider1" (userChangeEnd)="onUserChangeEnd('duration', $event, 'slider1')" (userChange)="onUserChange($event, 'slider1', true)"></ng5-slider>
                                 </div>
                                 <div class="legend-sec col-6 p-0">
                                     <div class="title">Volume Of Users</div>
                                     <div class="legends-info">
                                         <div class="one">
                                             <div class="bg-color"></div>
-                                            <div class="numbers">200 -250</div>
+                                            <!-- <div class="numbers">200 -250</div> -->
                                         </div>
                                         <div class="two">
                                             <div class="bg-color"></div>
-                                            <div class="numbers">150 -200</div>
+                                            <!-- <div class="numbers">150 -200</div> -->
                                         </div>
                                         <div class="three">
                                             <div class="bg-color"></div>
-                                            <div class="numbers">100 -150</div>
+                                            <!-- <div class="numbers">100 -150</div> -->
                                         </div>
                                         <div class="four">
                                             <div class="bg-color"></div>
-                                            <div class="numbers">50 -100</div>
+                                            <!-- <div class="numbers">50 -100</div> -->
                                         </div>
                                         <div class="five">
                                             <div class="bg-color"></div>
-                                            <div class="numbers">0 -50</div>
+                                            <!-- <div class="numbers">0 -50</div> -->
                                         </div>
                                     </div>
                                 </div>
