--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -10294,7 +10294,8 @@ input:checked + .custom-slider:before {
 }
 .filters-body {
     position: relative;
-    height: 100%;
+    /* height: 100%; */
+    height: fit-content;
     width: 100%;
     background: #f8f9fa;
     padding: 0;
