--- a/findly-builder/src/app/components/app-header/app-header.component.scss
+++ b/findly-builder/src/app/components/app-header/app-header.component.scss
@@ -143,6 +143,7 @@
       }
       .myappname{
         position: relative;
+        width: 205px;
         .name{
           text-align: center;
           vertical-align: middle;
