channels For UI

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="seach-block"><img src="assets/icons/search.svg"><img src="assets/images/close.svg" class="d-none">Search
                 </div>
-                <div class="add_feild"><img src="assets/icons/add_plus.svg">Add Credential
+                <div class="add_feild" (click)="newCredential()"><img src="assets/icons/add_plus.svg" >Add Credential
                 </div>
                 <div class="clock"><img src="assets/icons/clock.svg"></div>
          </div>
@@ -21,7 +21,7 @@
                 <div class="col-3 title">last updated by</div>
             </div>
             <div class="table-body-content row m-0 align-items-center">
-                <div class="col-3 title">Banking Bot</div>
+    <div class="col-3 title">{{credentials.name}}</div>
                 <div class="col-3 title">--</div>
                 <div class="col-3 title">11/08/2020 - 07:07pm</div>
                 <div class="col-3 title">
@@ -33,5 +33,54 @@
                 </div>
             </div>
         </div>
-    </perfect-scrollbar>    
+    </perfect-scrollbar>   
+    <kr-modal modalType="center" #addCredential modalClass="modal_popups_ view-query-modal">
+        <div class="modal-header">
+            <span> Add Credential</span>
+            <div class="close_icon" (click)="closeModalPopup()"><img src="assets/icons/modal-close.svg"></div>
+        </div>
+        <!-- <perfect-scrollbar class="perfect-scroll-modal-body"> -->
+        <div class="modal-body">
+            <div class="kr-sg-input-text mb-4">
+                <div class="label-text">Credential Name</div>
+                <input type="text" autocomplete="off" name="credname" placeholder="Enter Name" [(ngModel)]="credntial.name"
+                    class="input-text">
+            </div>
+            <div class="kr-sg-checkbox d-block p-0">
+                <input id="checkbox_1" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.anonymus">
+                <label for="checkbox_1" class="checkbox-custom-label">Allow anonymous users to chat with bot</label>
+            </div>
+            <div class="kr-sg-checkbox d-block p-0">
+                <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.register">
+                <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
+            </div>
+            <hr>
+    
+            <div class="label-text">JWT Signing Algorithm Used For Client App Authentication</div>
+            <div class="kr-sg-dropdowns">
+                <div class="dropdown dropdown-open">
+                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span class="select-placeholder">
+                            {{credntial.awt}}</span> </button>
+                    <ul class="dropdown-menu content-menu">
+                        <li (click)="jwtAuth('RS256')"><a>RS256</a></li>
+                        <li (click)="jwtAuth('HS256')"><a>HS256</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="switch-push-check">
+                <label class="kr-sg-toggle with-label large">
+                    <input type="checkbox" [(ngModel)]="credntial.enabled">
+                    <div class="slider"></div>
+                </label>
+                <span class="label_text">Push Notification Enabled</span>
+            </div>
+    
+    
+        </div>
+        <!-- </perfect-scrollbar> -->
+        <div class="modal-footer">
+            <button class="kr-sg-button-primary btn_lg" (click)="createCredential()">Add</button>
+            <button class="kr-sg-button-secondary btn_lg" (click)="closeModalPopup()">Cancel</button>
+        </div>
+    </kr-modal> 
 </div>
