updated some styles

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -54,7 +54,7 @@
                 <input id="checkbox_2" class="checkbox-custom" type="checkbox" [(ngModel)]="credntial.register">
                 <label for="checkbox_2" class="checkbox-custom-label">Auto register new user Kore.ai Bots Platform</label>
             </div>
-            <hr>
+            <hr class="mt-4 mb-4">
     
             <div class="label-text">JWT Signing Algorithm Used For Client App Authentication</div>
             <div class="kr-sg-dropdowns">
@@ -67,12 +67,11 @@
                     </ul>
                 </div>
             </div>
-            <div class="switch-push-check">
-                <label class="kr-sg-toggle with-label large">
+            <div class="switch-toggle mt-4">                
+                <label class="kr-sg-toggle">
                     <input type="checkbox" [(ngModel)]="credntial.enabled">
-                    <div class="slider"></div>
+                    <div class="slider"><span class="enabled">Push Notifications Enabled</span><span class="disabled">Push Notifications Enabled</span></div>
                 </label>
-                <span class="label_text">Push Notification Enabled</span>
             </div>
     
     
