--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.scss
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.scss
@@ -98,5 +98,14 @@
                 }
             }
         }
-    } 
+    }    
+}
+::ng-deep .view-query-modal{
+    .switch-toggle{
+        .kr-sg-toggle{
+            span{
+                width: 600px !important;
+            }
+        }       
+    }
 }
