Insights removed from Search & Results

--- a/findly-builder/src/app/components/result-insights/result-insights.component.scss
+++ b/findly-builder/src/app/components/result-insights/result-insights.component.scss
@@ -204,6 +204,11 @@
             .img-sec{
                 margin-right: 10px//25px;
             }
+        }
+        .data-overview{
+            white-space: normal;
+            text-overflow: ellipsis;
+            overflow: hidden;
         }                    
     }
     .footer-simulate{
