latest without edit and del

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -20,8 +20,8 @@
                 <div class="col-3 title">last updated<img src="assets/icons/dropdown_gray.svg" class="ml-1"></div>
                 <div class="col-3 title">last updated by</div>
             </div>
-            <div class="table-body-content row m-0 align-items-center">
-    <div class="col-3 title">{{credentials.name}}</div>
+            <div class="table-body-content row m-0 align-items-center" *ngFor="let data of channnelConguired">
+                <div class="col-3 title">{{data.appName}}</div>
                 <div class="col-3 title">--</div>
                 <div class="col-3 title">11/08/2020 - 07:07pm</div>
                 <div class="col-3 title">
