--- a/findly-builder/src/app/components/summary/summary.component.scss
+++ b/findly-builder/src/app/components/summary/summary.component.scss
@@ -526,6 +526,7 @@
                     display: inline-block;
                     padding-left: 5px;
                     margin: 12px 0 18px 0;
+                    cursor: pointer;
                 }    
                 .insights-info-wrapper{
                     background: #EAF6EC;
